--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,8 @@
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+.wrapper {
+  display:grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 10px;
+}
