--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
 }
 .jumbotron {
   text-align: center;
+  border-bottom: 4px solid #4f4630;
+  color: #a8a8a3;
+  background: inherit;
 }
 .modal {
     display: none; /* Hidden by default */
@@ -29,11 +32,15 @@
 .panel-body {
   border: 2px solid #7f673b;
   text-align: center;
+  background: #c6b999;
+  color: black;
 }
 .panel-heading {
   border: 2px solid #7f673b;
   padding: 2px;
   text-align: center;
+  background: #baad8d;
+  color:black;
 }
 html {
   position: relative;
@@ -43,12 +50,21 @@ body {
   background: url('../img/todolist.png');
   background-repeat: no-repeat;
   background-size: cover;
-  color: black;
+  color: #a8a8a3;
 }
-.jumbotron {
-  background: inherit;
-}
+
 .btn {
-  background: #ad9b79;
+  background: #665f49;
   border: 2px solid #ad9b79;
+}
+h4{
+  text-decoration: underline;
+}
+.modal-content {
+  background: #665f49
+  /*color: white;*/
+}
+textarea {
+  height: 150px;
+  width: 400px;
 }
