--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@
   text-align: center;
   color: black;
   display: block;
+  margin-bottom: 0px;
 }
 .panel-heading {
   border: 2px solid #7f673b;
@@ -65,7 +66,4 @@ h4{
 textarea {
   height: 150px;
   width: 400px;
-}
-checkbox {
-  font-size: 14pt;
 }
