--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@
   padding: 2px;
   text-align: center;
   color:black;
+  background-color: #f5f5f5;
 }
 .panel {
   border: 2px solid #7f673b;
@@ -64,8 +65,6 @@ body {
 }
 h4{
   text-decoration: underline;
-}
-.modal-content {
 }
 textarea {
   height: 150px;
